# Image_to_3D

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  share_log.txt
docs/superpowers/specs/: 2026-05-17-image-to-3d-design.md  2026-05-18-remote-access-design.md
scripts/: fetch_triposr.py  setup_env.py  share.py
src/image_to_3d/: __init__.py  tsr_compat.py
src/image_to_3d/api/: __init__.py  jobs.py  main.py  routes.py  schemas.py
src/image_to_3d/core/: __init__.py  config.py  errors.py  mesh.py  model.py  pipeline.py  preprocessing.py
src/image_to_3d/web/: app.js  index.html  styles.css
src/tsr/: VENDOR_INFO.txt
src/tsr/models/: isosurface.py
tests/: conftest.py  test_api.py  test_config.py  test_e2e_slow.py  test_mesh.py  test_pipeline.py  test_preprocessing.py
